Complete with the first homepage with the help of firebase fetch the data and work on that and footer also with the git repo and who developed with the git profile.

--- a/src/component/banner/banner.styles.scss
+++ b/src/component/banner/banner.styles.scss
@@ -8,20 +8,48 @@
         background: #f3f3f3;
 
         h1 {
-            margin-left: -70rem;
-            font-size: 45px;
+            margin-right: 80rem;
+            margin-left: 20px;
             margin-top: -20rem;
-            font-weight: 400;
             background: #f3f3f3;
+            font-size: 45px;
+            font-weight: 400;
+            width: 550px;
+
         }
 
-        h3{
-            margin-left: -53.5rem;
-            font-size: 15px;
-            // width: 250px;
-            font-weight: 400;
+        p {
+            margin-right: 59.2rem;
             background: #f3f3f3;
-            
+            color: #4a4a4a;
+            font-size: 13.5px;
+            font-weight: 600;
+        }
+
+        .p-next {
+            margin-left: 11.5px;
+            width: 320px;
+            margin-top: 3px;
+            color: #4a4a4a;
+            font-size: 13.5px;
+        }
+
+        .shop {
+            background-color: #f3f3f3;
+            font-size: 12px;
+            margin-top: 2.5rem;
+            margin-right: 97.5rem;
+            padding: 18px 25px;
+            height: 15px;
+            background: black;
+            color: white;
+            display: inline-block;
+
+            &:hover {
+                cursor: pointer;
+                color: white;
+                background-color: rgb(47, 46, 46);
+            }
         }
 
         img {
