--- a/src/component/navbar/navbar.styles.scss
+++ b/src/component/navbar/navbar.styles.scss
@@ -1,6 +1,11 @@
 .navbar {
-    margin-top: 15px;
-    margin-left: -30px;
+    // margin-top: 15px;
+    // margin-left: -30px;
+    margin-top: -2rem;
+    width: 120rem;
+    // background-color: aquamarine;
+    position: fixed;
+    height: 6rem;
 
     .navigation-bar {
         display: flex;
