--- a/src/component/homepage-com/navbar/navbar.styles.scss
+++ b/src/component/homepage-com/navbar/navbar.styles.scss
@@ -1,10 +1,10 @@
 .navbar {
     // margin-top: 15px;
     // margin-left: -30px;
-    margin-top: -2rem;
+    margin-top: 2rem;
     width: 120rem;
     // background-color: aquamarine;
-    position: fixed;
+    // position: fixed;
     height: 6rem;
 
     .navigation-bar {
@@ -62,7 +62,7 @@
 
     .sign-up{
         margin-left: 100rem;
-        margin-top: -33px;
+        margin-top: -30px;
         border: 1px solid black;
         width: 78px;
         padding: 9px 10px;
@@ -86,6 +86,6 @@
     }
 }
 
-*{
-    background-color: #f9f9f9;
-}
+// *{
+//     background-color: #f9f9f9;
+// }
