Changes of homepage and sign up page.

--- a/src/component/homepage-com/banner/banner.styles.scss
+++ b/src/component/homepage-com/banner/banner.styles.scss
@@ -2,7 +2,7 @@
 
     .banner {
         height: 25rem;
-        margin-top: 2rem;
+        margin-top: 8rem;
         margin-left: 5rem;
         margin-right: 5rem;
         background: #f3f3f3;
@@ -27,7 +27,7 @@
         }
 
         .p-next {
-            margin-left: 11.5px;
+            margin-left: 5px;
             width: 320px;
             margin-top: 3px;
             color: #4a4a4a;
@@ -40,7 +40,7 @@
             margin-top: 2.5rem;
             margin-right: 97.5rem;
             padding: 18px 25px;
-            height: 15px;
+            // height: 15px;
             background: black;
             color: white;
             display: inline-block;
