--- a/src/component/sign-up-com/anotherNav/another.styles.scss
+++ b/src/component/sign-up-com/anotherNav/another.styles.scss
@@ -2,10 +2,10 @@
     width: 100%;
     margin-top: 2rem;
 
-    .navbar {
+    .navbar-ano {
         // margin-top: 15px;
         // margin-left: -30px;
-        margin-top: -2rem;
+        // margin-top: 0.5rem;
         // width: 120rem;
         // background-color: aquamarine;
         // position: fixed;
