--- a/src/component/homepage-com/navbar/navbar.styles.scss
+++ b/src/component/homepage-com/navbar/navbar.styles.scss
@@ -1,10 +1,10 @@
 .navbar {
     // margin-top: 15px;
-    // margin-left: -30px;
-    margin-top: 2rem;
-    width: 120rem;
-    // background-color: aquamarine;
-    // position: fixed;
+    margin-left: -30px;
+    margin-top: -8rem;
+    width: 122rem;
+    background-color: #f2f2f2;
+    position: fixed;
     height: 6rem;
 
     .navigation-bar {
@@ -62,7 +62,7 @@
 
     .sign-up{
         margin-left: 100rem;
-        margin-top: -30px;
+        margin-top: -45px;
         border: 1px solid black;
         width: 78px;
         padding: 9px 10px;
@@ -74,7 +74,7 @@
 
     .sign-in{
         margin-left: 108rem;
-        margin-top: -36px;
+        margin-top: -40px;
         // border: 1px solid black;
         width: 78px;
         padding: 8px 10px;
