--- a/src/component/sign-up-com/anotherNav/another.styles.scss
+++ b/src/component/sign-up-com/anotherNav/another.styles.scss
@@ -1,6 +1,6 @@
 .another-navbar {
     width: 100%;
-    margin-top: 2rem;
+    // margin-top: 0.5rem;
 
     .navbar-ano {
         // margin-top: 15px;
