--- a/src/component/homepage-com/feProduct/feProduct.styles.scss
+++ b/src/component/homepage-com/feProduct/feProduct.styles.scss
@@ -15,6 +15,7 @@
         margin: 25px 15px;
         // width: 21rem;
         float: left;
+        // opacity: 1;
 
 
         img {
@@ -48,6 +49,8 @@
         &:hover {
             transition: all .5s cubic-bezier(.77, 0, .175, 1);
             transform: scale(1.0100);
+            
+            
 
             .fetch-name::hover {
                 transition: none;
