--- a/src/component/homepage-com/navbar/navbar.styles.scss
+++ b/src/component/homepage-com/navbar/navbar.styles.scss
@@ -61,8 +61,8 @@
     .sign-up-in {
         // background-color: aqua;
         margin-top: -2rem;
+        margin-left: 90rem;
         .sign-up {
-            margin-left: 85rem;
             border: 1px solid black;
             width: 78px;
             padding: 9px 10px;
@@ -70,14 +70,15 @@
             background-color: black;
             cursor: pointer;
             font-size: 13px;
+            //  margin-left: 20rem;
         }
 
         .sign-in {
-            margin-left: 108rem;
+            margin-left: 3rem;
             margin-top: -32px;
             // border: 1px solid black;
             width: 78px;
-            padding: 8px 10px;
+            padding: 9px 10px;
             background: #f2f2f2;
             color: #7d7d7d;
             border: 1px solid #e1e1e1;
