Work on a firebase with the sign-in thing,Complete the sign-in UI with validation,Done with the valid to sign up user only (When someone signs up then and then only it works with sign-in).

--- a/src/component/sign-in-com/al-account/al-account.styles.scss
+++ b/src/component/sign-in-com/al-account/al-account.styles.scss
@@ -12,7 +12,7 @@
         color: #4a4a4a;
         font-size: 0.8rem;
 
-        .button-in {
+        .button-up {
             border: 1px solid #e1e1e1;
             color: #4a4a4a;
             width: 10%;
