--- a/src/component/sign-in-com/anotherNav/another.styles.scss
+++ b/src/component/sign-in-com/anotherNav/another.styles.scss
@@ -67,7 +67,7 @@
 
         .sign-up {
             margin-left: 100rem;
-            margin-top: -30px;
+            margin-top: -3rem;
             border: 1px solid black;
             width: 78px;
             padding: 9px 10px;
