--- a/src/component/shopPage-com/nav-shop/nav-shop.styles.scss
+++ b/src/component/shopPage-com/nav-shop/nav-shop.styles.scss
@@ -1,7 +1,7 @@
-.navbar {
+.navbar-shop{
     // margin-top: 15px;
     margin-left: -30px;
-    margin-top: -8rem;
+    margin-top: -9rem;
     width: 122rem;
     background-color: white;
     position: fixed;
