Few changes on shop data apply proper styles,Create the new field and it navigates according to the id,Create the search component and apply the filter.

--- a/src/component/shopPage-com/shopPage-main/shopPage-main.styles.scss
+++ b/src/component/shopPage-com/shopPage-main/shopPage-main.styles.scss
@@ -1,56 +1,60 @@
-.f-product {
-    display: flex;
-    margin-left: 8rem;
-    margin-top: 6rem;
-    font-size: 30px;
-    font-weight: 400;
-}
-
 .fetch-item {
     margin-left: 7rem;
+    margin-top: 5rem;
 
-    .fetch {
+    .fetch-img {
         display: block;
         border: 1px solid #e1e1e1;
-        margin: 25px 15px;
+        margin-top: 7rem;
+        margin: 35px 15px;
         // width: 21rem;
         float: left;
         // opacity: 1;
+        height: 18rem;
+        width: 13.2rem;
+        
+        object-fit: contain;
+
 
 
         img {
-            width: 335px;
-            height: 225px;
-            cursor: pointer;
             background-color: #f1f1f1;
+            width: 210px;
+            height: 150px;
+            cursor: pointer;
+
 
         }
 
         .name-sub {
             margin-top: 20px;
-            margin-bottom: 20px;
+            // margin-bottom: 20px;
 
-            .fetch-name {
-                font-size: 25px;
-                display: flex;
-                margin-left: 20px;
-                font-weight: 400;
+            .fetch-shop-name {
+                font-size: 15px;
+                // display: flex;
+                // margin-left: 20px;
+                font-weight: 500;
             }
 
-            .fetch-subName {
-                font-size: 14px;
-                display: flex;
-                margin-left: 21px;
+            .fetch-shop-subName {
+                font-size: 12px;
                 font-style: italic;
                 color: #818181;
+                margin-top: 5px;
+            }
+
+            .fetch-shop-price{
+                font-weight: 700;
+                margin-top: 10px;
             }
         }
 
         &:hover {
             transition: all .5s cubic-bezier(.77, 0, .175, 1);
             transform: scale(1.0100);
-            
-            
+
+
 
             .fetch-name::hover {
                 transition: none;
