--- a/src/component/homepage-com/feProduct/feProduct.styles.scss
+++ b/src/component/homepage-com/feProduct/feProduct.styles.scss
@@ -35,6 +35,7 @@
                 display: flex;
                 margin-left: 20px;
                 font-weight: 400;
+                color: black;
             }
 
             .fetch-subName {
